PN-17552: updated tika-core version dependency and changed tika.isBla… (#743)
* PN-17552: updated tika-core version dependency and changed tika.isBlank from java.isBlank

* PN-17552: fix null condition